--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <link href="https://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet">
         <link rel="stylesheet" href="1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.css">
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.min.js"></script>
         <script src="https://unpkg.com/tween.js@16.3.4"></script>
         <script src="https://unpkg.com/color-js@1.0.3/color.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
     </head>
     <body>
         <div class="container" id="app">
@@ -52,7 +54,10 @@
               </transition>
             </div>
           </div>
-        </div>
+          
+          <pre id="object"></pre>
+
+          </div>
     </body>
     <script src="main.js"></script>
 </html>
