--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
         <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet">
         <link rel="stylesheet" href="1.css">
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase-messaging.js"></script>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.min.js"></script>
         <script src="https://unpkg.com/tween.js@16.3.4"></script>
         <script src="https://unpkg.com/color-js@1.0.3/color.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+        <link rel="stylesheet" href="1.css">
+        <link rel="stylesheet" href="2.css">
     </head>
     <body>
-        <div class="container" id="app">
+        <div class="container" id="main">
           <transition name="slider">
             <div role="alert" v-if="badNumber" class="alert alert-danger">
               <strong>Danger!</strong> You should use positive number.
@@ -44,14 +52,55 @@
 
             <div class="mx-auto">
               <transition name="press">
-                <div v-show="disableButton" class="text-center">
+                <div v-if="disableButton" class="text-center">
                   <h2 class="recordStyle text-center col-sm-12">Clicks: {{count}}</h2>
                   <h2 class="text-center col-sm-12">Time: {{time/100.0}}</h2>
-                  <button @click="up" class="btn btn-lg btn-primary mx-auto press">PRESS ME!</button>
+                  <button @click="clickUp" class="btn btn-lg btn-primary mx-auto press">PRESS ME!</button>
                 </div>
               </transition>
             </div>
+            <div class="">
+
+            </div>
           </div>
+
+          <!-- Scoreboard -->
+          <transition name="fade">
+          <div  class="container col-6">
+            <!-- Play -->
+            <div class="text-center form-group">
+              <label for="exampleInputEmail1"></label>
+              <input v-filter="'[a-zA-Z]'" v-model="nickName" type="text" class="topInput mx-auto form-control col-3" placeholder="Your nick">
+            </div>
+            <div class="text-center form-group">
+              <button @click="play" type="button" class="btn btn-primary">Play</button>
+            </div>
+            <!-- Play -->
+            <button @click="osb" type="button" class="btn btn-primary">Reload</button>
+            <table class="table-bordered table-striped table">
+              <thead class="thead-inverse">
+                <tr>
+                  <th scope="row">#</th>
+                  <th scope="row">Nick</th>
+                  <th scope="row">Score</th>
+                </tr>
+              </thead>
+              <tbody class="table-striped">
+                <template >
+                <tr v-for="(data, index) in scoreBoard">
+                  <th scope="col-1 row">{{index+1}}</th>
+                  <td class="col-1">{{data[0]}}</td>
+                  <td class="col-1">{{data[1]}}</td>
+                </tr>
+                </template>
+              </tbody>
+            </table>
+          </div>
+        </transition>
+          <!-- Scoreboard -->
+        </div>
     </body>
+    <script src="board.js"></script>
     <script src="main.js"></script>
+
 </html>
